<resources>
    <string name="app_name">Exedra</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard_changes_title">Discard Changes</string>
    <string name="discard_changes_message">Are you sure to discard the changes you have made?</string>
    <string name="title_activity_sub_category">SubCategoryActivity</string>
    <string name="activity_title_new_request">New Request</string>
    <string name="activity_title_rent_now">Rent Now</string>

    <string name="activity_title_product_details">Product Details</string>
    <string name="button_next">Next</string>
    <string name="button_done">Done</string>
    <string name="button_share">Share</string>
    <string name="button_post_another">Post Another</string>
    <string name="select_category">Select category</string>
    <string name="select_subcategory">Select sub category</string>
    <string name="description">Description</string>
    <string name="button_take_photo">Take Photo</string>
    <string name="button_select_photo">Select Photo</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_brand_manufacturer">Enter Brand/Manufacturer</string>
    <string name="enter_model">Enter Product Model</string>
    <string name="enter_serialNo">Enter Serial No</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="posted_on">Posted On</string>
    <string name="listed_by">Listed By</string>
    <string name="product_description">Product Description</string>
    <string name="enter_daily_rental_price">Daily Price*</string>
    <string name="daily_rate">Daily Rate</string>
    <string name="enter_weekly_rental_price">Weekly Price*</string>
    <string name="enter_monthly_rental_price">Monthly Price*</string>
    <string name="enter_deposit_amount">Deposit Amount*</string>
    <string name="enter_unit_sale_price">Enter Unit Sale Price</string>
    <string name="purchase_amount">Purchase Amount*</string>
    <string name="specify_the_condition">Specify the condition</string>
    <string name="fragment_title_describe_product">Describe Product</string>
    <string name="fragment_title_upload_photo">Upload Photo</string>
    <string name="fragment_title_add_price">Add Price</string>
    <string name="fragment_title_done">Done!</string>
    <string name="offer_posted_description">In a short time, thousands of local \nbuyers will see your offer!</string>
    <string name="ferrari">Ferrari</string>
    <string name="optional">(optional)</string>
    <string name="my_listing">My Listing</string>
    <string name="my_orders">My Orders</string>
    <string name="open_requests">Open Requests</string>
    <string name="request">Request</string>
    <string name="subcategories">SubCategories</string>
    <string name="products">Products</string>
    <string name="productDetails">Product Detail</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="checkbox_need_delivery">Need Delivery?</string>
    <string name="button_request_product">Request Product</string>
    <string name="share_subject">Subject</string>
    <string name="share_description">Description</string>
    <string name="google_maps_key">AIzaSyC0Cu2l3mI-Mjih_ug7c4Mpp1uwyvIWoGs</string>
    <string name="title_activity_product_posted">ProductPostedActivity</string>
    <string name="permission_required_toast">Please enable Location permission</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="rent_or_buy">Rent/Buy</string>
    <string name="select_rent_type">Select Rent Type</string>
    <string name="select">Select</string>
    <string name="serial_number">Serial Number(optional)</string>
    <string name="model">Model(optional)</string>
    <string name="brand_manufacturer">Brand/Manufacturer *</string>
    <string name="title">Enter title here</string>
    <string name="rent_to_own">Rent to own</string>
    <string name="picture_upload_instruction">Recommended 4 pictures (from different angles)</string>
    <string name="search_hint">Tell us what do you want</string>
    <string name="add_weekly_monthly_rates">Add Weekly and Monthly Rates</string>
    <string name="insurance_coverage">Insurance Coverage</string>

    <array name="dashboard_tab_titles">
        <item>Rent</item>
        <item>Buy</item>
        <item>Rent to own</item>
        <item>Requests</item>
    </array>
    
    <string name="button_complete_step1">Complete Step 1/5</string>
    <string name="button_complete_step2">Complete Step 2/5</string>
    <string name="button_complete_step3">Complete Step 3/5</string>
    <string name="button_complete_step4">Complete Step 4/5</string>
    <string name="button_post_now">Post Now !</string>

    <string name="sort_price_lowtohigh">Price: Low to High</string>
    <string name="sort_price_hightolow">Price: High to Low</string>
    <string name="sort_newest_ads">Newest Ads</string>
    <string name="sort_closest_ads">Closest Ads</string>

    <string name="filter">Filter</string>
    <string name="filter_categories">Categories</string>
    <string name="filter_location">Location</string>
    <string name="filter_price">Price</string>

    <array name="product_categories">
        <item>Home and Garden</item>
        <item>Fashion and Accessories</item>
        <item>Baby Care</item>
        <item>Cars and Motors</item>
        <item>Electronics</item>
        <item>Free Stuff</item>
        <item>Sports</item>
        <item>Games and Leisure</item>
        <item>Multimedia</item>
        <item>Other</item>
    </array>

    <string name="action_reset"> Reset </string>
    <string name="section_title_sort_by">Sort by</string>
    <string name="section_title_filter_by">Filter by</string>
    <string name="distance_0_km">0 miles</string>

    <string name="category_home">Home &amp; Garden</string>
    <string name="category_fashion">Fashion &amp; Accessories</string>
    <string name="category_baby">Baby care</string>
    <string name="category_cars">Cars &amp; Motors</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_free">Free Stuff</string>
    <string name="category_sports">Sports</string>
    <string name="category_games">Games &amp; Leisure</string>
    <string name="category_multimedia">Multimedia</string>
    <string name="category_other">Other</string>

    <string name="delivery_fees">Delivery Fees</string>
    <string name="congratulation">Congratulation!</string>
    <string name="you_almost_done">You Almost Done</string>
    <string name="you_can_choose">You can choose to deliver the item for a little extra cash and convenience !</string>
    <string name="would_you_like">Would you like to offer delivery ?</string>
    <string name="learn_how_delivery_works">Learn how delivery works</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="insert_0_if">Insert 0 if you willing to ship it</string>
    <string name="miles">Miles</string>
    <string name="dollar">$</string>
    <string name="add_photo">Add Photo</string>
    <string name="you_can_add_upto_4_photos">* You can add 4 photos</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="choose_photo_from">Choose photo from</string>
    <string name="enter_description">Enter Description</string>
    <string name="weekly_rate">Weekly Rate</string>
    <string name="monthly_rate">Monthly Rate</string>
    <string name="new_request">New Request</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="i_want_to">I want to</string>
    <string name="login_signup_button">Log In/Sign Up</string>
    <string name="both">Both</string>
    <string name="select_your_requested_item_type">Select your requested item type</string>
    <string name="item_name">Item Name</string>
    <string name="item_category">Item Category</string>
    <string name="when_will_you_need_it">When will you need it?</string>
    <string name="tell_us_what_is_your_budget">Tell us what is your budget?</string>
    <string name="per_day"> /Per Day</string>
    <string name="amount">Amount</string>
    <string name="rent_and_sell">Rent &amp; Sell</string>
    <string name="list_it">List it</string>
    <string name="cannot_find_an_item">Can\'t find an item?</string>
    <string name="post_a_request">Post a request</string>
    <string name="selling_price">Selling Price</string>
</resources>