<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/rentbnb_custom_toolbar_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/i1_15dp_margin"
        android:text="@string/i_want_to" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/i1_10dp_margin"
        android:layout_marginLeft="@dimen/i1_10dp_margin"
        android:layout_marginRight="@dimen/i1_10dp_margin"
        android:layout_marginStart="@dimen/i1_10dp_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_request_sell_button"
            style="@style/filter_by_button"
            android:text="@string/sell" />

        <Button
            android:id="@+id/new_request_rent_button"
            style="@style/filter_by_button"
            android:text="@string/rent" />

        <Button
            android:id="@+id/new_request_rent_to_own_button"
            style="@style/filter_by_button"
            android:paddingLeft="@dimen/i1_15dp_padding"
            android:paddingRight="@dimen/i1_15dp_padding"
            android:text="@string/rent_and_sell" />

    </LinearLayout>

    <View
        android:id="@+id/spinner_underline"
        style="@style/i1_underline_1dp"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/i1_15dp_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/i1_15dp_margin"
        android:text="@string/cannot_find_an_item"
        android:textSize="16dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/new_request_post_a_request_button"
        style="@style/post_a_request_button"
        android:text="@string/post_a_request"
        android:paddingLeft="@dimen/i1_15dp_padding"
        android:paddingRight="@dimen/i1_15dp_padding" />

</LinearLayout>