<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tab_post_offer_step_4_done_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/fragment_title_done"
        style="@style/i1_card_title"
        android:layout_marginTop="@dimen/i1_20dp_margin"
        android:layout_marginBottom="@dimen/i1_15dp_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer_posted_description"
        android:textAppearance="@style/i1_8R_ST"
        android:id="@+id/tab_post_offer_step_4_done_description_textView"
        android:layout_below="@+id/tab_post_offer_step_4_done_title_textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="@dimen/addproduct_imageview_dimens"
        android:layout_height="@dimen/addproduct_imageview_dimens"
        android:src="@drawable/auto"
        android:id="@+id/tab_post_offer_step_4_photo_imageView"
        android:layout_below="@+id/tab_post_offer_step_4_done_description_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/i1_20dp_margin"
        android:layout_marginTop="@dimen/i1_30dp_margin"/>

    <TextView
        android:id="@+id/tab_post_offer_step_4_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ferrari"
        style="@style/i1_8R"
        android:textAllCaps="false"
        android:layout_below="@+id/tab_post_offer_step_4_photo_imageView"
        android:layout_marginBottom="@dimen/i1_30dp_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tab_post_offer_step_4_title_textView"
        android:id="@+id/tab_post_offer_step_4_linearLayout">

        <Button
            android:id="@+id/tab_post_offer_step_4_post_another_button"
            style="@style/i1_button_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_post_another"
            android:layout_weight="0.10"
            android:drawableLeft="@drawable/take_photo_icon"
            android:drawablePadding="@dimen/i1_15dp_padding"
            android:textAlignment="textStart"
            android:layout_gravity="start" />

        <Button
            android:id="@+id/tab_post_offer_step_4_share_button"
            style="@style/i1_button_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_share"
            android:layout_weight="0.56"
            android:drawableLeft="@drawable/share_icon"
            android:drawablePadding="@dimen/i1_15dp_padding"
            android:textAlignment="textStart"
            android:layout_gravity="start" />

    </LinearLayout>

    <Button
        android:id="@+id/tab_post_offer_step_4_finish_button"
        style="@style/i1_button_standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_done" />

</RelativeLayout>