<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rent_now"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.intbit.rentbnb.ui.activities.RentNowActivity">

    <include layout="@layout/rentbnb_custom_toolbar_view"
        android:id="@+id/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/i1_card_view_without_content_padding"
        android:layout_marginTop="@dimen/i1_card_view_margin_8dp"
        android:layout_below="@+id/toolbar"
        android:id="@+id/activity_rent_now_cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/activity_rent_now_startDate_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="viewClicked"
                android:orientation="horizontal">

                <ImageView
                    style="@style/i1_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/calendar_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_row_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_rent_now_startDate_TextView"
                        style="@style/i1_text_view"
                        android:layout_marginTop="@dimen/i1_15dp_margin"
                        android:text="@string/select_start_date" />

                    <View
                        style="@style/i1_underline_1dp"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/i1_15dp_margin" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_rent_now_endDate_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="viewClicked"
                android:orientation="horizontal">

                <ImageView
                    style="@style/i1_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/calendar_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_row_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_rent_now_endDate_TextView"
                        style="@style/i1_text_view"
                        android:layout_marginTop="@dimen/i1_15dp_margin"
                        android:text="@string/select_end_date" />

                    <View
                        style="@style/i1_underline_1dp"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/i1_15dp_margin" />

                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:text="@string/checkbox_need_delivery"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/i1_10dp_margin"
                android:layout_height="@dimen/activity_row_height"
                android:id="@+id/checkBox" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        style="@style/i1_button_standard"
        android:text="@string/button_request_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/activity_rent_now_requestButton" />

</RelativeLayout>